# cascade

./: .autoformat.sh  .clang-format  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  node-add.cpp  node-add.h  node-div.cpp  node-div.h  node-mul.cpp  node-mul.h  node-sub.cpp  node-sub.h  node-var.cpp  node-var.h  node.cpp  node.h  test.py  unumber-base.cpp  unumber-base.h  unumber.h  unumber.tpp  var.cpp  var.h
.github/workflows/: main.yml  ubuntu.yml  windows.yml
examples/: CMakeLists.txt  example_covariances.cpp  example_derivatives.cpp  example_optimization.cpp
src/: CMakeLists.txt  cascade.h  functions.cpp  main.cpp  math.cpp  node-mul.cpp  node-sub.cpp  node-var.cpp  node.cpp  node_add.cpp  node_cos.cpp  node_div.cpp  node_sin.cpp  node_sub.cpp  node_tan.cpp  node_var.cpp  node_var.h  tensor.cpp  tensor.cu  tensor.h  tensor.h.inl  tensor.tpp  tensor_data.h  util.cpp  var.cpp  var.h
src/functions/: functions.cpp  functions.h  node_abs.cpp  node_acos.cpp  node_acosh.cpp  node_acosh.h  node_add.h  node_asin.cpp  node_atan.cpp  node_atan.h  node_atanh.cpp  node_div.cpp  node_div.h  node_exp.h  node_exp10.h  node_exp2.h  node_log10.h  node_log2.cpp  node_max.h  node_min.cpp  node_min.h  node_neg.h  node_pow.h  node_sinh.cpp  node_sqrt.cpp  node_sqrt.h  node_sub.h  node_tanh.cpp  node_tanh.h
src/include/: functions.h  math.h  node-div.h  node-mul.h  node.h  node_add.h  node_cos.h  node_div.h  node_mul.h  node_sin.h  node_sub.h  node_var.h  util.h  var.h
src/include/functions/: node_cos.h  node_tan.h
src/kernels/: kernel_add.h  kernel_mul.cu  kernel_sum.cu  kernel_sum.h
src/tensor/: CMakeLists.txt  proxy_value.h  tensor.cpp  tensor.h  tensor.h.inl  tensor.inl.h  tensor_data.h
src/tensor/kernels/: kernel_add.cu  kernel_add.h  kernel_mul.h  kernel_sum.cu  kernel_sum.h
src/var/: CMakeLists.txt  node.cpp  node_var.cpp  node_var.h  util.h  var.cpp  var.h
src/var/functions/: functions.cpp  functions.h  node_abs.h  node_acos.cpp  node_acos.h  node_asin.cpp  node_asin.h  node_asinh.cpp  node_asinh.h  node_atanh.h  node_cos.h  node_cosh.cpp  node_cosh.h  node_exp.cpp  node_exp10.cpp  node_exp2.cpp  node_log.cpp  node_log.h  node_log10.cpp  node_log2.h  node_max.cpp  node_mul.cpp  node_mul.h  node_neg.cpp  node_pow.cpp  node_sin.h  node_sinh.h  node_sqrt.cpp  node_tan.h
tests/: CMakeLists.txt  covariance_tests.cpp  derivative_tests.cpp  matrix_tests.cpp  tensor_tests.cpp  var_tests.cpp
tests/include/: tolerance.h
